Added support for zip files

--- a/templates/upload.html
+++ b/templates/upload.html
@@ -4,9 +4,7 @@
 <h1>Moss Test</h1>
 <h2>Instructions</h2>
 <p>
-    Upload the zip/rar/tar file you uploaded to OurVLE for the assignment here, <strong>EXACTLY AS YOU UPLOADED IT.</strong>
-    I will run a moss comparison and see where the similarities are, so we can know what we're getting into with Dr. Fokum.
-    Obviously, don't send this to Fokum.
+    Upload a <strong>ZIP FILE</strong> containing your assignment here. We'll handle the rest. This only works if people make it work though.
 </p>
 <form action="{{ url_for('upload') }}" method="POST" enctype="multipart/form-data">
     <div><label for='assignment'>Your assignment</label></div>
