--- a/templates/upload.html
+++ b/templates/upload.html
@@ -4,7 +4,10 @@
 <h1>Moss Test</h1>
 <h2>Instructions</h2>
 <p>
-    Upload a <strong>ZIP FILE</strong> containing your assignment here. We'll handle the rest. This only works if people make it work though.
+    Upload a <strong>ZIP FILE</strong> containing your assignment here. We'll handle the rest. This only works if people make it work though. It currently only supports zip files containing Python code. Support for Java and other compression formats coming soon, if there is adequate demand (Read: If I can bother to.)
+</p>
+<p>
+    <strong>NOTE:</strong> Your zip file MUST contain a folder with your Python code in it, otherwise it just won't work.
 </p>
 <form action="{{ url_for('upload') }}" method="POST" enctype="multipart/form-data">
     <div><label for='assignment'>Your assignment</label></div>
