Added java support

--- a/templates/failure.html
+++ b/templates/failure.html
@@ -2,5 +2,5 @@
 
 {% block content %}
 <h1>Error uploading file</h1>
-<p>Please ensure you are uploading a zip/rar/tar file and try again.</p>
+<p>Please ensure you are uploading a valid zip file and try again.</p>
 {% endblock %}
