Added boostrap theme

--- a/templates/failure.html
+++ b/templates/failure.html
@@ -1,6 +1,13 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Error uploading file</h1>
-<p>Please ensure you are uploading a valid zip file and try again.</p>
+<div class="alert alert-error alert-block">
+    <p>
+        <strong>Error!</strong> Invalid zip file or improper file formatting. 
+    </p>
+    <p>
+        Ensure that your file is a valid <strong>zip</strong> file and that it is formatted as
+        file.zip -> folder -> your code
+    </p>
+</div>
 {% endblock %}
