--- a/templates/upload.html
+++ b/templates/upload.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="jumbotron">
-  <h1>CloudMoss</h1>
+  <h1>CloudMoss | {{ language }}</h1>
   <p class="lead">
     <h2>Instructions</h2>
     <p>
