--- a/templates/base.html
+++ b/templates/base.html
@@ -69,6 +69,13 @@
                 <li><a href="{{ url_for('upload') }}">Upload File</a></li>
                 <li><a href="{{ url_for('about') }}">About</a></li>
                 <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Project Language<b class="caret"></b></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="{{ url_for('upload', language='python') }}">Python</a></li>
+                    <li><a href="{{ url_for('upload', language='java') }}">Java</a></li>
+                  </ul>
+                </li>
+                <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">View results<b class="caret"></b></a>
                   <ul class="dropdown-menu">
                     <li><a href="{{ url_for('view', language='python') }}">Python</a></li>
